// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`conventions.md scaffold > TypeScript Next.js project with partial conventions 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Conventions — test-project

## Key Facts
**Detected:** Functions: camelCase
**Detected:** Imports: relative

## Naming Conventions

**Functions:** camelCase (confidence: 0.92)

## Import Organization

**Style:** relative
**Confidence:** 0.75

## Code Style

## Open Questions
**Unexamined:** Examples from codebase, exceptions to rules, team-specific preferences
**Unexamined:** Import grouping rules, alias patterns, ordering conventions
**Unexamined:** Line length, formatting rules, linter config, code style guide
**Unexamined:** Team-specific conventions, file organization, comment style

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`conventions.md scaffold > empty result (scan failed) 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Conventions — test-project

## Key Facts

## Naming Conventions

*Naming conventions not analyzed*

## Import Organization

*Import conventions not detected with sufficient confidence*

## Code Style

## Open Questions
**Unexamined:** Examples from codebase, exceptions to rules, team-specific preferences
**Unexamined:** Import grouping rules, alias patterns, ordering conventions
**Unexamined:** Line length, formatting rules, linter config, code style guide
**Unexamined:** Team-specific conventions, file organization, comment style

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;

exports[`conventions.md scaffold > rich Python project with full conventions 1`] = `
"<!-- SCAFFOLD - Setup will fill this file -->

# Conventions — test-project

## Key Facts
**Detected:** Functions: snake_case
**Detected:** Imports: absolute
**Detected:** Indentation: 4 spaces

## Naming Conventions

**Files:** snake_case (confidence: 0.98)
**Variables:** snake_case (confidence: 0.95)
**Functions:** snake_case (confidence: 0.97)
**Classes:** PascalCase (confidence: 1.00)
**Constants:** SCREAMING_SNAKE_CASE (confidence: 0.90, mixed)
  Distribution: SCREAMING_SNAKE_CASE: 90%, UPPER_CASE: 10%

## Import Organization

**Style:** absolute
**Confidence:** 0.85
**Distribution:** absolute: 85%, relative: 15%

## Code Style

**Indentation:** spaces (4 spaces)
**Confidence:** 1.00 (from config file)

## Open Questions
**Unexamined:** Examples from codebase, exceptions to rules, team-specific preferences
**Unexamined:** Import grouping rules, alias patterns, ordering conventions
**Unexamined:** Line length, formatting rules, linter config, code style guide
**Unexamined:** Team-specific conventions, file organization, comment style

---

*Last updated: 2026-03-19T10:00:00Z*
"
`;
